data/derived/fa15/progs/unify/prog3825.ml.out
Characters 193-236:
  else buildCirc(build(rand, depth-1),build(rand, depth-1))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
